<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="old_launcher_provider_uri" translatable="false">content://com.android.launcher2.settings/favorites?notify=true</string>
    <string name="receive_launch_broadcasts_permission" translatable="false">com.gwchina.launcher3.permission.RECEIVE_LAUNCH_BROADCASTS</string>
    <string name="receive_first_load_broadcast_permission" translatable="false">com.gwchina.launcher3.permission.RECEIVE_FIRST_LOAD_BROADCAST</string>
    <string name="app_name">weizhuo</string>
    <string name="application_name">Launcher3</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="all_apps_search_bar_hint">Search Apps&#8230;</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Go to <xliff:g id="query" example="Play Store">%1$s</xliff:g></string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="first_run_cling_title">Welcome</string>
    <string name="migration_cling_title">Copy your app icons</string>
    <string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
    <string name="migration_cling_copy_apps">COPY ICONS</string>
    <string name="migration_cling_use_default">START FRESH</string>
    <string name="workspace_cling_longpress_title">Wallpapers, widgets, &amp; settings</string>
    <string name="workspace_cling_longpress_description">Touch &amp; hold background to customize</string>
    <string name="workspace_cling_longpress_dismiss">GOT IT</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="allow_rotation_title">Allow rotation</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> downloading, <xliff:g id="progress" example="30%">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> waiting to install</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g id="number" example="1">%1$s</xliff:g> column <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g id="name" example="Messenger">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g id="name" example="Game">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g id="number" example="2">%1$s</xliff:g> height <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="pageanim_normal">"Classic"</string>
    <string name="pageanim_turntable">"Windmill"</string>
    <string name="pageanim_layered">"Cascade"</string>
    <string name="pageanim_rotate">"Rotate"</string>
    <string name="pageanim_pageturn">"Page"</string>
    <string name="pageanim_rotatebylefttoppoint">"Card"</string>
    <string name="pageanim_rotatebycenterpoint">"Compass"</string>
    <string name="pageanim_blocks">"Box"</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="image_load_fail">Coudn\'t load image</string>
    <string name="wallpaper_load_fail">Couldn\'t load image as wallpaper</string>
    <string name="wallpaper_set_fail">Couldn\'t set image as wallpaper</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="announce_selection">Selected <xliff:g id="label" example="Wallpaper 3 of 10">%1$s</xliff:g></string>
    <string name="wallpaper_delete">Delete</string>
    <string name="pick_image">My photos</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="which_wallpaper_option_home_screen">Home screen</string>
    <string name="which_wallpaper_option_lock_screen">Lock screen</string>
    <string name="which_wallpaper_option_home_screen_and_lock_screen">Home screen and lock screen</string>
    <string name="week_day_format">%1$s, %2$s</string>
    <string name="str_hiboard_healthy_tip">今天使用的时长太久了，出门活动一下筋骨吧！</string>
    <string name="str_hiboard_learn_tip">趣学习</string>
    <string name="str_hiboard_history_tip">历史上的今天</string>
    <string name="str_hiboard_play_tip">同学们都在玩</string>
    <string name="str_hiboard_healthy_use_phone">使用手机</string>
    <string name="str_hiboard_healthy_steps">步数</string>
    <string name="str_study_1">国学经典</string>
    <string name="str_study_2">生活猎奇</string>
    <string name="str_study_3">同步教材</string>
    <string name="str_study_4">动漫教学</string>
    <string name="str_study_5">黄冈名师</string>
    <string name="folder_learn">learn</string>
    <string name="folder_game">game</string>
    <string name="str_time_days" msgid="7110262897769622564">"<xliff:g id="DAYS">%1$d</xliff:g>天<xliff:g id="HOURS">%2$d</xliff:g>小时<xliff:g id="MINUTES">%3$d</xliff:g>分<xliff:g id="SECONDS">%4$d</xliff:g>秒"</string>
    <string name="str_time_hours" msgid="7525170329826274999">"<xliff:g id="HOURS">%1$d</xliff:g>小时<xliff:g id="MINUTES">%2$d</xliff:g>分<xliff:g id="SECONDS">%3$d</xliff:g>秒"</string>
    <string name="str_time_minutes" msgid="1467775596084148610">"<xliff:g id="MINUTES">%1$d</xliff:g>分<xliff:g id="SECONDS">%2$d</xliff:g>秒"</string>
    <string name="str_time_seconds" msgid="4283492130945761685">"<xliff:g id="SECONDS">%1$d</xliff:g>秒"</string>
    <string name="str_time_days_no_seconds" msgid="703063770554334710">"<xliff:g id="DAYS">%1$d</xliff:g>天<xliff:g id="HOURS">%2$d</xliff:g>小时<xliff:g id="MINUTES">%3$d</xliff:g>分钟"</string>
    <string name="str_time_hours_no_seconds" msgid="663342892615646712">"<xliff:g id="HOURS">%1$d</xliff:g>小时<xliff:g id="MINUTES">%2$d</xliff:g>分钟"</string>
    <string name="str_time_minutes_no_seconds" msgid="7780294302606853082">"<xliff:g id="MINUTES">%1$d</xliff:g>分钟"</string>
    <string name="str_greenbox_black_hole">格雷黑洞</string>
    <string name="str_lssw">绿色上网</string>
</resources>