<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@mipmap/bg_card"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_titlebar_pedometer"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_titlebar_pedometer"
        android:gravity="start|center_vertical"
        android:padding="10dp"
        android:text="@string/str_hiboard_healthy_tip"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_use_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--分钟"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_pedometer_phone"
                android:drawablePadding="5dp"
                android:text="@string/str_hiboard_healthy_use_phone"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_pedometer_pace"
                android:drawablePadding="5dp"
                android:text="@string/str_hiboard_healthy_steps"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
